force-app/main/default/objects/Dashboard_Field_Config__mdt/Dashboard_Field_Config__mdt.object-meta.xml
<CustomObject>
    <label>Dashboard Field Config</label>
    <pluralLabel>Dashboard Field Configs</pluralLabel>
</CustomObject>