force-app/main/default/objects/Dashboard_Field_Config__mdt/fields/Badge_Variant__c.field-meta.xml
<CustomField>
    <fullName>Badge_Variant__c</fullName>
    <label>Badge Variant</label>
    <length>20</length>
    <type>Text</type>
</CustomField>