force-app/main/default/objects/Dashboard_Field_Config__mdt/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>