force-app/main/default/objects/Dashboard_Field_Config__mdt/fields/CSS_Class__c.field-meta.xml
<CustomField>
    <fullName>CSS_Class__c</fullName>
    <label>CSS Class</label>
    <length>120</length>
    <type>Text</type>
</CustomField>