force-app/main/default/objects/Dashboard_Field_Config__mdt/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <label>Display Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>