force-app/main/default/objects/Dashboard_Field_Config__mdt/fields/Is_Title_Field__c.field-meta.xml
<CustomField>
    <fullName>Is_Title_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Title Field</label>
    <type>Checkbox</type>
</CustomField>