force-app/main/default/objects/Dashboard_Field_Config__mdt/fields/SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Name__c</fullName>
    <label>SObject Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>